--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@ body {
     font-size: 16px; 
     font-family: "Krub", sans-serif; 
     background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%); 
+    overflow-x:hidden
+
 } 
 
 img{
@@ -249,6 +251,65 @@ h1, h2, h3{
     display: flex; 
     align-items: flex-end; 
 }
+
+.portada .wave {
+    position:absolute; 
+    bottom:-5rem; left:0 ; 
+    width:100%;
+    height:11rem; 
+    background:url(../img/wave.png);
+    background-size:100rem 11rem; 
+    background-repeat: repeat-x;
+    animation:wave 10s linear infinite;
+}
+
+.portada .wave2 {
+    animation-direction: reverse;
+    opacity:.2;
+}
+
+.portada .wave3 {
+    animation-duration: 4s;
+    opacity:.9;
+}
+
+.portada .fa-cog {
+    position:absolute; 
+    font-size:30rem; 
+    opacity:.15; 
+    color:#fff;
+    animation: rotate 10s linear infinite;
+}
+
+.portada .nut1 {
+    top:10%; left:-15rem;
+}
+
+.portada .nut2 {
+    bottom:23%; right:-13rem;
+    animation-direction: reverse;
+}
+
+@keyframes wave {
+    0%{
+        background-position-x:0 ;
+    }
+    100%{
+        background-position-x:100rem;
+    }
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.portada .boton:hover{
+    letter-spacing: .1rem;
+
+}
+
 /**-----------------------------------------------------------------------------------------------------------**/
 
 
