--- a/css/styles.css
+++ b/css/styles.css
@@ -554,4 +554,18 @@ align-items: center;
         align-items: center;
         }
 }
+
+
+@media (min-width:480px) { 
+    .contenedor_iconos { 
+        display:flex; 
+        flex-direction: row; 
+        align-items: center;
+        }
+}
+
+
+
+
+
 /**-----------------------------------------------------------------------------------------------------------**/
